Fix spacing

--- a/src/components/Landing/Landing.module.scss
+++ b/src/components/Landing/Landing.module.scss
@@ -182,8 +182,7 @@
   .blockFeeBurn {
     position: relative;
     padding-bottom: 4rem;
-    padding-top: 10rem;
-  
+    
       .eipBg {
       position: absolute;
       top: 0;
